# peval

./: .coveragerc  .gitignore  .readthedocs.yaml  .readthedocs.yml  .travis.yml  LICENSE.md  LICENSE.rst  README.md  README.rst  TODO.rst  mypy.ini  peval.sublime-project  pylintrc  pyproject.toml  setup.cfg  setup.py
.github/workflows/: docs.yml  lints.yml  tests.yml
docs/: Makefile  conf.py  index.rst  make.bat
docs/source/: conf.py  index.rst
peval/: __init__.py  highlevelapi.py  tags.py  typing.py  wisdom.py
peval/components/: __init__.py  fold.py  inline.py  peval_function_header.py  prune_assignments.py  prune_cfg.py
peval/core/: callable.py  cfg.py  expression.py  function.py  gensym.py  mangler.py  reify.py  scope.py
peval/tools/: __init__.py  dispatcher.py  immutable.py  utils.py  walker.py
tests/: coverage.sh  test_highlevelapi.py  test_tags.py  test_wisdom.py  utils.py
tests/test_components/: test_fold.py  test_inline.py  test_peval_function_header.py  test_prune_cfg.py
tests/test_core/: test_callable.py  test_cfg.py  test_expression.py  test_function.py  test_mangler.py  test_reify.py
tests/test_tools/: test_immutable.py  test_utils.py  test_walker.py
