[build-system]
requires = ["setuptools>=61.2", "setuptools_scm[toml]>=3.4.3"]
build-backend = "setuptools.build_meta"

[project]
name = "peval"
authors = [{name = "Bogdan Opanchuk", email = "bogdan@opanchuk.net"}]
description = "Partial evaluation on AST level"
keywords = ["AST", "partial", "optimization"]
readme = "README.rst"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Operating System :: OS Independent",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Software Development :: Code Generators",
]
urls = {Homepage = "https://github.com/fjarri/peval"}
requires-python = ">=3.8.0"
dependencies = [
    "astunparse>=1.3.0",
]
dynamic = ["version"]

[project.optional-dependencies]
testing = ["pytest"]

[tool.setuptools]
platforms = ["any"]
include-package-data = false

[tool.setuptools.packages.find]
include = [
    "peval",
    "peval.*",
]
namespaces = false

[tool.setuptools_scm]
