[project]
name = "peval"
version = "0.2.0.dev"
license = "MIT"
authors = [{name = "Bogdan Opanchuk", email = "bogdan@opanchuk.net"}]
description = "Partial evaluation on AST level"
keywords = ["AST", "partial", "optimization"]
readme = "README.md"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Operating System :: OS Independent",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Software Development :: Code Generators",
]
urls = {Homepage = "https://github.com/fjarri/peval"}
requires-python = ">=3.8.0"
dependencies = [
    "typing-extensions>=4.2",
]

[project.optional-dependencies]
astunparse = [
    "astunparse>=1.3",
]
astor = [
    "astor>=0.8",
]
tests = [
    "pytest>=7",
    "pytest-cov",
]
docs = [
    "sphinx>=4",
    "furo",
    "setuptools-scm>=7",
]
lint = [
    "mypy>=0.941",
    "black>=23",
]

[build-system]
requires = ["pdm-pep517"]
build-backend = "pdm.pep517.api"

[tool.pdm.build]
source-includes = [
    "tests/**/*.py",
    "docs/*.rst",
    "docs/*.py",
    "docs/*.bat",
    "docs/Makefile",
    ".coveragerc",
    "mypy.ini",
]

[tool.setuptools_scm]

[tool.black]
line-length = 100
target-version = ['py38']
