[metadata]
name = peval
author = Bogdan Opanchuk
author_email = bogdan@opanchuk.net
description = Partial evaluation on AST level
keywords = AST, partial, optimization
url = https://github.com/fjarri/peval
long_description = file: README.rst
classifiers =
    Development Status :: 3 - Alpha
    Operating System :: OS Independent
    Intended Audience :: Science/Research
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.5
    Topic :: Software Development :: Libraries :: Python Modules
    Topic :: Software Development :: Code Generators
platforms = any

[options]
packages = find:
install_requires = astunparse>=1.3.0
python_requires = >=3.6.0
tests_require = pytest

[options.packages.find]
include = 
    peval
    peval.*
